chore: make project deployment-ready for Render
- Add render.yaml blueprint (backend web service + frontend static site)
- Replace hardcoded localhost:8080 with VITE_API_URL env var in dashboard.jsx and login.jsx
- Update application.properties: in-memory H2, dynamic PORT, CORS from env var
- Update SecurityConfig.java: read CORS allowed origin from app property
- Add frontend/.env.example for developer reference
- Update .gitignore: exclude frontend/.env